# cifuzz-bazel

./: .gitignore  BUILD.bazel  MODULE.bazel  tool_paths.bzl
.bcr/: config.yml  metadata.template.json  presubmit.yml  source.template.json
include/cifuzz/: cifuzz.h
